# 2015-semi

./: .gitignore  README.md
7dof_arm_moveit_config/: CMakeLists.txt  ReadMe.md  crane.urdf  package.xml
7dof_arm_moveit_config/config/: crane.srdf  joint_limits.yaml
7dof_arm_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
baxter_vision_example/: CMakeLists.txt  README.md  border.launch  heightmap.launch  package.xml  play.launch  pointcloud_in_hand.rviz  rosparam.yaml  segmentation_in_bin.rviz  setup.launch
baxter_vision_example/euslisp/: infront_gripper.l
baxter_vision_example/launch/: baxter_world.launch  border.launch  clipper.launch  heightmap.launch  pc_in_hand.launch  play.launch  record_kiva_mask_to_remove.launch  remove_kiva_points_by_mask.launch
baxter_vision_example/launch/include/: robot_self_filter.yaml
baxter_vision_example/scripts/: mask_compare.py  mask_generate.py  save_mask.py  save_mask_current.py  tf_listener.py
baxter_vision_example/urdf/: baxter.urdf  baxter.xacro
depth/: CMakeLists.txt  ReadMe.md  ReadMe.md~  mainpage.dox  manifest.xml
depth/src/: depth2.py  img.py  nao_depth_odom.py  show.py
hiro_direct_teaching/: README.md  initial2.py  initial_ros.py  send_input_key.py  teaching_two_arms.py  teaching_two_arms_by_voice.py  teaching_two_arms_by_voice_auto.py  teaching_two_arms_with_hand.py
nao_practice/: CMakeLists.txt  README.md  package.xml
(+13 files in other folders)
