<package>
  <name>baxter_vision_example</name>
  <version>0.0.0</version>
  <description>baxter vision example</description>

  <maintainer email="wkentaro@gmail.com">Kentaro Wada</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- list dependencies in alphabetical order -->
  <run_depend>jsk_pcl_ros</run_depend>
  <run_depend>jsk_rviz_plugins</run_depend>
  <run_depend>baxter_description</run_depend>

  <export>
  </export>

</package>
