<package>
  <name>baxter_vision_example</name>
  <version>0.0.0</version>
  <description>baxter vision example</description>

  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- list dependencies in alphabetical order -->
  <build_depend>roseus</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>jsk_pcl_ros</run_depend>
  <run_depend>jsk_rviz_plugins</run_depend>
  <run_depend>baxter_description</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>baxtereus</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>

</package>
